logs/microblog.log
2025-10-19 15:06:09,084 ERROR: Exception on /index [GET] [in C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\app\routes.py", line 33, in index
    return render_template("index.html", title='Home Page', form=form,
                           posts=posts.items, next_url=next_url,
                           prev_url=prev_url)
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "C:\Users\dima\microblog\venv\Lib\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\dima\microblog\venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\dima\microblog\venv\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\dima\microblog\app\templates\index.html", line 26, in template
    {% endblock %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endblock'. You probably made a nesting mistake. Jinja is expecting this tag, but currently looking for 'elif' or 'else' or 'endif'. The innermost block that needs to be closed is 'if'.
2025-10-19 15:07:41,012 INFO: Microblog startup [in C:\Users\dima\microblog\app\__init__.py:28]
2025-10-19 15:52:26,213 INFO: Microblog startup [in C:\Users\dima\microblog\app\__init__.py:30]
2025-10-19 19:27:49,430 INFO: Microblog startup [in C:\Users\dima\microblog\app\__init__.py:45]
2025-10-19 19:27:55,456 ERROR: Exception on /index [GET] [in C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\app\routes.py", line 29, in index
    posts = db.paginate(current_user.following_posts(), page=page, per_page=app.config['POSTS_PER_PAGE'], error_out=False)
                                                                            ~~~~~~~~~~^^^^^^^^^^^^^^^^^^
KeyError: 'POSTS_PER_PAGE'
2025-10-19 19:28:22,056 ERROR: Exception on /reset_password_request [POST] [in C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask_mail\__init__.py", line 540, in send
    message.send(connection)
    ~~~~~~~~~~~~^^^^^^^^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask_mail\__init__.py", line 482, in send
    connection.send(self)
    ~~~~~~~~~~~~~~~^^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask_mail\__init__.py", line 177, in send
    self.host.sendmail(
    ~~~~~~~~~~~~~~~~~~^
        sanitize_address(envelope_from or message.sender),
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<3 lines>...
        message.rcpt_options,
        ^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 873, in sendmail
    self.ehlo_or_helo_if_needed()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 618, in ehlo_or_helo_if_needed
    if not (200 <= self.ehlo()[0] <= 299):
                   ~~~~~~~~~^^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 458, in ehlo
    self.putcmd(self.ehlo_msg, name or self.local_hostname)
    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 385, in putcmd
    self.send(f'{s}{CRLF}')
    ~~~~~~~~~^^^^^^^^^^^^^^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 372, in send
    raise SMTPServerDisconnected('please run connect() first')
smtplib.SMTPServerDisconnected: please run connect() first

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\app\routes.py", line 176, in reset_password_request
    send_password_reset_email(user)
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Users\dima\microblog\app\email.py", line 13, in send_password_reset_email
    send_email('[Microblog] Reset Your Password',
    ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
               sender=app.config['ADMINS'][0],
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<3 lines>...
                                         html_body=render_template('email/reset_password.html',
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
                                         user=user, token=token))
                                         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\dima\microblog\app\email.py", line 9, in send_email
    mail.send(msg)
    ~~~~~~~~~^^^^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask_mail\__init__.py", line 539, in send
    with self.connect() as connection:
         ~~~~~~~~~~~~^^
  File "C:\Users\dima\microblog\venv\Lib\site-packages\flask_mail\__init__.py", line 136, in __exit__
    self.host.quit()
    ~~~~~~~~~~~~~~^^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 1005, in quit
    res = self.docmd("quit")
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 438, in docmd
    self.putcmd(cmd, args)
    ~~~~~~~~~~~^^^^^^^^^^^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 385, in putcmd
    self.send(f'{s}{CRLF}')
    ~~~~~~~~~^^^^^^^^^^^^^^
  File "C:\Users\dima\AppData\Local\Programs\Python\Python314\Lib\smtplib.py", line 372, in send
    raise SMTPServerDisconnected('please run connect() first')
smtplib.SMTPServerDisconnected: please run connect() first
2025-10-19 20:03:48,394 INFO: Microblog startup [in C:\Users\dima\microblog\app\__init__.py:45]
